# aa-intel-tool

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  codecov.yml  package-lock.json  package.json  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: automated-checks.yml
.make/: myauth-path
.make/conf.d/: django-esi.mk
aa_intel_tool/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  constants.py  exceptions.py  form.py  models.py  providers.py  tasks.py  urls.py  utils.py  views.py
aa_intel_tool/helper/: data_structure.py  eve_character.py  intel_parser.py  static_files.py  urls.py
aa_intel_tool/locale/: django.pot
aa_intel_tool/locale/cs/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/de/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/es/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/it_IT/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/ja/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/nl/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/nl_NL/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/ru/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/sk/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/uk/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
aa_intel_tool/management/commands/: aa_intel_tool_load_eve_types.py
aa_intel_tool/migrations/: 0001_initial.py  0002_alter_scan_raw_data.py  0002_remove_scan_processed_data_scandata.py  0003_alter_scandata_scan.py  0004_alter_scandata_section.py  0005_alter_scan_options_alter_scandata_options_and_more.py  0006_alter_scandata_unique_together.py  0007_alter_scandata_section.py  0008_alter_scandata_section.py  0009_alter_scan_scan_type.py  __init__.py
aa_intel_tool/parser/: __init__.py  chatlist.py  dscan.py  fleetcomp.py  general.py
aa_intel_tool/parser/helper/: db.py
aa_intel_tool/parser/module/: chatlist.py  dscan.py  fleetcomp.py
aa_intel_tool/providers/: applogger.py  esi.py
aa_intel_tool/scripts/: drop_tables.sql
aa_intel_tool/static/aa_intel_tool/css/: aa-bootstrap-fix.css  aa-bootstrap-fix.min.css  aa-intel-tool.css  aa-intel-tool.min.css  aa-intel-tool.min.css.map
aa_intel_tool/static/aa_intel_tool/javascript/: aa-intel-tool-chatscan-highlight.js  aa-intel-tool-chatscan-highlight.min.js  aa-intel-tool-chatscan-highlight.min.js.map  aa-intel-tool-chatscan.js  aa-intel-tool-chatscan.min.js  aa-intel-tool-chatscan.min.js.map  aa-intel-tool-clipboard.js  aa-intel-tool-clipboard.min.js  aa-intel-tool-dscan-highlight.js  aa-intel-tool-dscan-highlight.min.js  aa-intel-tool-dscan-highlight.min.js.map  aa-intel-tool-dscan.js  aa-intel-tool-dscan.min.js  aa-intel-tool-dscan.min.js.map  aa-intel-tool-fleetcomposition-highlight.js  aa-intel-tool-fleetcomposition-highlight.min.js  aa-intel-tool-fleetcomposition-highlight.min.js.map  aa-intel-tool-fleetcomposition.js  aa-intel-tool-fleetcomposition.min.js  aa-intel-tool-fleetcomposition.min.js.map  aa-intel-tool-highlight.js  aa-intel-tool-highlight.min.js  aa-intel-tool-scan-result-common.js  aa-intel-tool-scan-result-common.min.js  aa-intel-tool-scan-result-common.min.js.map  aa-intel-tool.js  aa-intel-tool.min.js  aa-intel-tool.min.js.map
aa_intel_tool/templates/aa_intel_tool/: base-public.html  base.html
aa_intel_tool/templates/aa_intel_tool/bundles/: aa-intel-tool-chatscan-highlight-js.html  aa-intel-tool-chatscan-js.html  aa-intel-tool-css.html  aa-intel-tool-dscan-highlight-js.html  aa-intel-tool-dscan-js.html  aa-intel-tool-fleetcomp-js.html  aa-intel-tool-fleetcomposition-highlight-js.html  aa-intel-tool-js-l10n.html  aa-intel-tool-js.html  aa-intel-tool-scan-result-common-js.html  datatables-2-css.html  datatables-2-js.html
aa_intel_tool/templates/aa_intel_tool/legacy_templates/: base.html
aa_intel_tool/templatetags/: aa_intel_tool.py  inteltool_versioned_static.py
aa_intel_tool/tests/: __init__.py  chatlist-faulty.txt  test_access.py  test_admin.py  test_app_settings.py  test_auth_hooks.py  test_helper_data_structures.py  test_helper_eve_character.py  test_helper_urls.py  test_models.py  test_parser.py  test_parser_general.py  test_parser_helper_db.py  test_parser_module_chatlist.py  test_parser_module_dscan.py  test_parser_module_feetcomp.py  test_providers.py  test_tasks.py  test_templatetags.py  test_views.py  test_views_ajax.py  test_views_general.py  utils.py
aa_intel_tool/tests/test-data/: chatscan.txt  dscan-german-client.txt  dscan-russian-client.txt  dscan.txt  fleetcomp.txt
aa_intel_tool/views/: ajax.py  general.py
locale/: fr_FR.json  it_IT.json  ko_KR.json  ru.json
testauth/: local.py  urls.py
testauth/settings/: base.py  local.py
testauth/settings/legacy/: local.py
(+71 files in other folders)
