[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aa-intel-tool"
version = "0.0.1-alpha.7"
description = "A simple parser for D-Scans and more for Alliance Auth"
readme = "README.md"
license = "GPL-3.0"
requires-python = "~=3.8"
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
keywords = [
    "allianceauth",
    "eveonline",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth>=3.6.1",
    "allianceauth-app-utils>=1.19.1",
    "django-eveuniverse>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/ppfeufer/aa-intel-tool"
Documentation = "https://github.com/ppfeufer/aa-intel-tool/blob/master/README.md"
Source = "https://github.com/ppfeufer/aa-intel-tool.git"
Changelog = "https://github.com/ppfeufer/aa-intel-tool/blob/master/CHANGELOG.md"
Tracker = "https://github.com/ppfeufer/aa-intel-tool/issues"

[tool.hatch.build]
include = [
    "/aa_intel_tool",
]
