[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-intel-tool"
description = "A simple parser for D-Scans and more for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
]
license = { file = "LICENSE" }
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.10,<5",
    "django-eveuniverse>=1.3",
]
optional-dependencies.tests-allianceauth-latest = [
    "coverage",
    "django-webtest",
]
urls.Changelog = "https://github.com/ppfeufer/aa-intel-tool/blob/master/CHANGELOG.md"
urls.Codecov = "https://codecov.io/gh/ppfeufer/aa-intel-tool"
urls.Discord = "https://discord.gg/fjnHAmk"
urls.Documentation = "https://github.com/ppfeufer/aa-intel-tool/blob/master/README.md"
urls.Donation = "https://ko-fi.com/ppfeufer"
urls.GitHub = "https://github.com/ppfeufer/aa-intel-tool"
urls.Tracker = "https://github.com/ppfeufer/aa-intel-tool/issues"
urls.Translation = "https://weblate.ppfeufer.de/projects/alliance-auth-apps/aa-intel-tool/"

[tool.hatch.build]
include = [
    "/aa_intel_tool",
]

[tool.hatch.version]
path = "aa_intel_tool/__init__.py"
